--- a/app/views/trajetDetails.xml
+++ b/app/views/trajetDetails.xml
@@ -1,4 +1,8 @@
+<!---->
 <Alloy>
-	<View class="container">
-	</View>
+	<Window id="pointsWin" title="Points" platform="android,ios" class="container">
+		<TableView id="pointsTable" dataCollection="points" dataFilter="whereFunction" dataTransform="transformFunction">
+			<Require src="rowPoint"/>
+		</TableView>
+	</Window>
 </Alloy>
